--- a/style.css
+++ b/style.css
@@ -1,85 +1,51 @@
-.fundo{
-  animation: scales 3s alternate  infinite;
-  transform-origin: center;
-}
-.pao-baixo{
-   animation: rotatepao 14s cubic-bezier(.1,.49,.41,.97)  infinite;
-  transform-origin: center;
-}
-.pao-cima{
-   animation: rotatepao 7s 1s cubic-bezier(.1,.49,.41,.97)  infinite;
-  transform-origin: center;
-}
-.olhos{animation: olhos   2s  alternate  infinite;
-   transform-origin: center;
+
+body
+{
+  background-color:#fff;
+/*   background: radial-gradient(at 50% -20%, #908392, #0d060e) fixed; */
 }
 
-.left-sparks{animation: left-sparks   4s  alternate  infinite;
-      transform-origin: 150px 156px;
+
+#handboy
+{
+   animation: swing ease-in-out 1.3s infinite alternate;
+    transform-origin: 98% 98%;
+    transform-box: fill-box;
+    
 }
 
-.right-sparks{animation: left-sparks   4s  alternate  infinite;
-      transform-origin: 310px 150px;
+
+#girllight
+{
+   animation: swing ease-in-out 1.3s infinite alternate;
+    transform-origin: 0% 97%;
+    transform-box: fill-box;
 }
 
-.olhos{animation: olhos   2s  alternate  infinite;
-   transform-origin: center;
-}
-@keyframes scales{
-  from { transform: scale(0.98)}
-  to{ transform: scale(1)}
-}
-
-@keyframes rotatepao{
-  0% { transform:  rotate(0deg)}
-  50% , 60%{ transform:  rotate(-20deg)}
-  100%{  transform:  rotate(0deg) }
- 
-}
-
-@keyframes olhos{
-  0%{
-    transform: rotateX(0deg);
-  }
-   100%{
-    transform: rotateX(30deg);
-  }
-}
-
-@keyframes left-sparks{
-  0%{
-    opacity: 0; 
-  }
+#hairgirl
+{
+    animation: swinghair ease-in-out 1.3s infinite alternate;
+   transform-origin: 60% 0%;
+    transform-box: fill-box;
   
 }
 
-
-.main{
+#zero
+{
+  transform-origin:bottom;
+  transform-box:fill-box;
   
-  min-height: 600px;
-  margin: 0px auto;
-  width: auto;
-  max-width: 460px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.path {
-  stroke-dasharray: 300;
-  stroke-dashoffset: 300;
-  animation: dash 4s   alternate infinite;
+/*************swing************/
+@keyframes swing {
+    0% { transform: rotate(10deg); }
+    100% { transform: rotate(-10deg); }
 }
 
-@keyframes dash{
-   0%, 30%{
-     fill: 4B4B62;
-    stroke-dashoffset:   0;
-  }
-   80%,100%{
-     fill: transparent;
-    stroke-dashoffset:  -200;
-  }
-   
-  
+
+/*************swing hair************/
+@keyframes swinghair {
+    0% { transform: rotate(6deg); }
+    100% { transform: rotate(-6deg); }
 }
