--- a/css/style.css
+++ b/css/style.css
@@ -474,8 +474,27 @@ select {
 
 }
 
+.quote {
+    font-style: italic;
+    color: #555;
+    margin-top: 50px;
+    font-size: 18px;
+    line-height: 1.5;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.quote footer {
+    margin-top: 10px;
+    font-size: 16px;
+    color: #888;
+    text-align: center;
+    display: block;
+}
+
 .home .intro .social-links {
-    margin-top: 25px;
+    margin-top: 55px;
 }
 
 .home .intro .social-links a {
@@ -527,6 +546,24 @@ select {
 
 /* About Section */
 
+.timeline-text ul {
+  padding-left: 20px;
+  margin: 10px 0;
+}
+
+.timeline-text ul li {
+  margin-bottom: 5px;
+  font-size: 16px;
+  color: #504e70;
+}
+
+.timeline-text ul ul {
+  margin-top: 5px;
+  padding-left: 20px;
+  list-style-type: circle; /* Or disc/square/etc. */
+}
+
+
 .about .about-content {
     -ms-flex: 0 0 100%;
     flex: 0 0 100%;
@@ -554,16 +591,16 @@ select {
 }
 
 .about .about-content .personal-info {
-    -ms-flex: 0 0 60%;
-    flex: 0 0 60%;
-    max-width: 60%;
+    -ms-flex: 0 0 100%;
+    flex: 0 0 100%;
+    max-width: 100%;
     margin-top: 40px;
 }
 
 .about .about-content .personal-info .info-item {
-    -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
-    max-width: 50%;
+    -ms-flex: 0 0 33.33%;
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
 }
 
 .about .about-content .personal-info .info-item p {
