--- a/css/style.css
+++ b/css/style.css
@@ -505,6 +505,7 @@ select {
     line-height: 45px;
     color: #ffffff;
     margin: 0 10px;
+    margin-bottom: 15px;
     border-radius: 40%;
     text-decoration: none;
     -webkit-transition: all 0.3s ease;
